Message header pane: Break in the middle of "words", e.g. for Path and XTrace headers. Bug 526918, r=bwinton, a=standard8
--HG--
extra : rebase_source : e6bc4e6b2f363d3d6a041bb2b19c66b8bff5f863

--- a/mail/themes/gnomestripe/mail/messageHeader.css
+++ b/mail/themes/gnomestripe/mail/messageHeader.css
@@ -588,4 +588,5 @@ mail-newsgroups-headerfield {
 mail-headerfield > .headerValue {
   -moz-user-focus: normal;
   -moz-user-select: text;
+  word-wrap: break-word;
 }
