--- a/mail/themes/pinstripe/mail/messageHeader.css
+++ b/mail/themes/pinstripe/mail/messageHeader.css
@@ -634,4 +634,5 @@ mail-newsgroups-headerfield {
 mail-headerfield > .headerValue {
   -moz-user-focus: normal;
   -moz-user-select: text;
+  word-wrap: break-word;
 }
