--- a/mail/themes/qute/mail/messageHeader.css
+++ b/mail/themes/qute/mail/messageHeader.css
@@ -594,4 +594,5 @@ mail-newsgroups-headerfield {
 mail-headerfield > .headerValue {
   -moz-user-focus: normal;
   -moz-user-select: text;
+  word-wrap: break-word;
 }
